# DeepSeek-TUI

./: .cnb.yml  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.es-419.md  README.ja-JP.md  README.ko-KR.md  README.md  README.pt-BR.md  README.vi.md  README.zh-CN.md  SECURITY.md  config.example.toml  deny.toml  package-lock.json
.codewhale/: constitution.json
.github/: APPROVED_CONTRIBUTORS  AUTHOR_MAP
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/scripts/: update-homebrew-tap.sh  update-homebrew-tap.test.sh
.github/workflows/: auto-tag.yml  ci.yml  claude.yml  nightly.yml  release.yml
crates/agent/: Cargo.toml
crates/app-server/: Cargo.toml
crates/build-support/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  update.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  provider.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/execpolicy/: Cargo.toml
crates/hooks/: Cargo.toml
crates/lane/: Cargo.toml
crates/lane/src/: runtime.rs
crates/mcp/: Cargo.toml
crates/protocol/: Cargo.toml
crates/protocol/src/: fleet.rs
crates/release/: Cargo.toml
crates/secrets/: Cargo.toml
crates/state/: Cargo.toml
crates/tools/: Cargo.toml
crates/tui/: AGENTS.md  CHANGELOG.md  Cargo.toml
crates/tui/assets/: model_catalog.bundled.json
crates/tui/locales/: AGENTS.md  en.json  es-419.json  ja.json  ko.json  pt-BR.json  vi.json  zh-Hans.json  zh-Hant.json
crates/tui/src/: audit.rs  child_env.rs  config.rs  config_ui.rs  context_budget.rs  context_report.rs  cost_status.rs  localization.rs  main.rs  model_registry.rs  network_policy.rs  pricing.rs  project_context.rs  prompts.rs  route_budget.rs  runtime_api.rs  runtime_mobile.html  runtime_threads.rs  (+4 more)
crates/workflow/: Cargo.toml
docs/: ACCESSIBILITY.md  AGENT_ETHOS.md  AGENT_RUNTIME.md  AGENT_WORKFLOWS_0868.md  ARCHITECTURE.md  CLASSROOM_INSTALL.md  CONFIGURATION.md  CONTRIBUTORS.md  DOCKER.md  FLEET.md  FLEET_WORKFLOW_TUTORIAL.md  GUIDE.md  INSTALL.md  KEYBINDINGS.md  LEGACY_PATHS.md  LOCALIZATION.md  MODEL_LAB.md  MODES.md  PROMPT_MODE_MATRIX.md  PROVIDERS.md  RECEIPTS.md  SANDBOX.md  SUBAGENTS.md  TERMUX.md  TOOL_LIFECYCLE.md  TOOL_SURFACE.md  TTC_DESIGN.md  TUI_DOG_008_STATE_MATRIX_2026-07-12.md  WORKFLOW_AUTHORING.md  public-surface-facts.json
docs/releases/: v0.9.0-release-candidate.md
docs/rfcs/: 3209-workrooms.md  FILE_DECOMPOSITION_0_9_0.md  HARNESS_PROFILE_CUTLINE.md  UNIFIED_PROVIDER_LOGIN.md  WORKFLOW_EXTERNAL_MEMORY.md
docs/skills/: README.md
extensions/vscode/: README.md  package.json
fleets/: stopship.toml
integrations/feishu-bridge/: README.md
integrations/wecom-bridge/: README.md
integrations/weixin-bridge/: README.md
npm/codewhale/: README.md  package.json
npm/runtime-sdk/: README.md
scripts/: catalog_models_dev.py  catalog_models_dev_test.py  check-coauthor-trailers.py  check-readme-translations.py  mobile-smoke.sh  test_check_coauthor_trailers.py
scripts/installer/: codewhale.nsi
scripts/release/: branch-hygiene.sh  branch-hygiene.test.sh  check-versions.sh  prepare-local-release-assets.js
scripts/remote-smoke/: README.md  setup-vm.sh
web/: AGENTS.md  package-lock.json
web/components/: install-binary.tsx
web/lib/: docs-navigation.test.ts  docs-navigation.ts  docs-theme-contract.test.ts  facts-drift.ts  facts.generated.ts  install-platform.test.ts  install-platform.ts  page-meta.ts
web/scripts/: facts-lib.mjs
workflows/: operate_best_of_n.workflow.js  operate_parallel_scout.workflow.js  operate_read_audit.workflow.js  operate_staged_fix.workflow.js  stopship.workflow.js
(+176 files in other folders)
