[package]
name = "codewhale-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Model/provider registry and fallback strategy for Codewhale"

[dependencies]
codewhale-config = { path = "../config", version = "0.9.1" }
serde.workspace = true
