[package]
name = "codewhale-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Secret storage backends for Codewhale, with OS keyring and file fallback"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempfile.workspace = true
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(all(target_os = "linux", not(target_env = "ohos"), not(target_env = "musl")))'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent", "crypto-rust"] }

[dev-dependencies]
tempfile.workspace = true
