[package]
name = "codewhale-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Session/thread persistence and recovery model for Codewhale"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
codewhale-protocol = { path = "../protocol", version = "0.9.1" }
dirs.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
